--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,7 +9,7 @@ textarea{
   border: none;
   resize: none;
   color: #000000;
-  border-left: solid 1px rgb(228, 227, 227);
+  border-left: 1px solid black;
   padding: 10px;
   width: 100%;
   height: 100%;
@@ -27,16 +27,20 @@ header {
 
 .description {
   white-space: pre-wrap;
+  padding: 0;
+  display: flex !important;
 }
 
 .time-block {
   text-align: center;
   border-radius: 15px;
+  
 }
 
 .row {
+  white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid gray;
+  border-top: 1px solid white;
 }
 
 .hour {
@@ -44,7 +48,6 @@ header {
   color: #000000;
   border-top: 1px dashed #000000;
   text-align: center;
-  padding: 30px 9px 9px 9px;
   font-weight: bold;
 }
 
