--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -25,6 +25,16 @@ header {
   
 }
 
+#clear{
+  text-align: center;
+  margin-bottom: 20px;
+  margin-right: 0;
+  margin-left: 0;
+  background-color: red;
+  color: white;
+  padding: 10px;
+}
+
 .description {
   white-space: pre-wrap;
   padding: 0;
