adds pointer to i icon

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -15,6 +15,10 @@ textarea{
   height: 100%;
 }
 
+i:hover{
+  cursor: pointer;
+}
+
 header {
   text-align: center;
   background-color: transparent;
